# Course-work-No.-3

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
tests/: conftest.py  test_utils.py
