[tool.poetry]
name = "3-3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "3"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
attrs = "^22.2.0"
colorama="^0.4.6"
coverage="^7.2.2"
iniconfig="^2.0.0"
packaging="^23.0"
pluggy="^1.0.0"
pytest="^7.2.2"
pytest-cov="^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
